# Coursera

./: 'Coursera WNCAPN4C6M3D.pdf'  .gitignore  README  README.md
cpp_black_belt/: iterator_range.h  misc.h  test_runner.h
cpp_black_belt/spreadsheet/: CMakeLists.txt  Formula.g4  Makefile  ast.cpp  ast.h  ast_delete_visitor.h  ast_insert_visitor.h  ast_node.h  ast_print_visitor.cpp  ast_print_visitor.h  ast_ref_cells_visitor.h  ast_visitor.cpp  ast_visitor.h  cell.cpp  cell.h  common.h  formula.cpp  formula.h  formula_impl.h  main.cpp  pack.sh  position.cpp  profile_advanced.cpp  sheet.cpp  sheet.h  table.h  test_runner.h
cpp_black_belt/transport_final_project/: CMakeLists.txt  Makefile  database.cpp  database.h  database.pb.cc  database.pb.h  database.proto  descriptions.h  graph.h  input.txt  io.cpp  io.h  json.h  main.cpp  main_serdes.cpp  renderer.pb.cc  renderer.pb.h  router.h  router.pb.cc  router.pb.h  router.proto  svg_render.cpp  svg_render.h  transport_catalog.pb.cc  transport_catalog.pb.h  transport_catalog.proto  transport_router.cpp  transport_router.h
cpp_black_belt/transport_final_project/Testing/Temporary/: CTestCostData.txt
cpp_black_belt/transport_final_project/json/: CMakeLists.txt  Makefile  json.h
cpp_black_belt/transport_final_project/proto/transport_catalog/: db.proto  router.proto
cpp_black_belt/transport_final_project/proto/yellow_pages/: rubric.proto  sphere.proto
cpp_black_belt/transport_final_project/transport_catalog/: CMakeLists.txt  Makefile  database.cpp  database.h  descriptions.h  disances.cpp  io.cpp  io.h  json.cpp  main.cpp  main_serdes.cpp  req_impl.cpp  req_impl.h  svg_render.cpp  svg_render.h  time_interval.cpp  time_interval.h  transport_router.cpp  transport_router.h
cpp_black_belt/transport_final_project/transport_catalog/proto/: renderer.proto  router.proto  transport_catalog.proto
cpp_black_belt/transport_final_project/transport_catalog/tests/: CMakeLists.txt  Makefile  main.cpp
cpp_black_belt/transport_final_project/yellow_pages/: CMakeLists.txt  Makefile  address.cpp  address.h  company.cpp  company.h  name.h  phone.h  rubrics.h  working_time.h  yellow_pages.h  yp_index.cpp  yp_index.h  yp_serialize.cpp  yp_serialize.h
cpp_black_belt/transport_final_project/yellow_pages/proto/: database.proto  working_time.proto
cpp_black_belt/transport_final_project/yellow_pages/tests/: CMakeLists.txt  Makefile  main.cpp
cpp_black_belt/transport_final_project/yp_proto/: address.proto  company.proto
cpp_black_belt/week_1/: budget_san.cpp  domains_in.txt  domains_san.cpp  file.txt  makefile  san_fail.cpp  ub.cpp  variant_test.cpp
cpp_black_belt/week_2/: json.cpp  json.h  json_printer.cpp  nucleotide.cpp  nucleotide.h  nucleotide_test.cpp  obj_chain_test.cpp  padding.cpp  saveload.h  saveload_test.cpp
cpp_black_belt/week_2/yellow_pages/: CMakeLists.txt  Makefile  address.pb.cc  address.pb.h  company.pb.cc  company.pb.h  merge.cpp  name.pb.cc  name.pb.h  phone.pb.cc  phone.pb.h  provider.pb.cc  provider.pb.h  signal.pb.cc  signal.pb.h  url.pb.cc  url.pb.h  working_time.pb.cc  working_time.pb.h
cpp_black_belt/week_3/mython-interp/: CMakeLists.txt  Makefile  comparators.cpp  mython.cpp  object.cpp  object.h  object_holder.cpp  statement.cpp  statement_test.cpp  test.py
cpp_black_belt/week_4/: CMakeLists.txt  Makefile  apply_to_many.cpp  apply_to_many.h  const_auto_ref.cpp  count.cpp  enable_if.cpp  equals_to_one_of.cpp  optional  optional.cpp  optional.h
cpp_brown_belt/: ostream_color.h
cpp_brown_belt/week_1/: hash_person.cpp  hash_point.cpp  hash_set.cpp  priority_collection_2.cpp  secondary_index.cpp  set_iterator_next.cpp
cpp_brown_belt/week_2/: comment_server.cpp  ini.cpp  ini.h  spendings_json.cpp  spendings_xml.cpp  test_ini.cpp  xml.h
cpp_brown_belt/week_3/: concurrent_map_2.cpp  excp_init_list_test.cpp  lazy_value.cpp  main.cpp  makefile  object_pool.cpp  pipeline.cpp  polynomial.cpp  print_stats_2.cpp  print_stats_2_i.txt  synchronized_2.cpp
cpp_brown_belt/week_4/: unique_ptr.cpp
cpp_brown_belt/week_5/: budget_home_desktop.cpp  budget_in.txt  budget_prof_desktop.cpp  budget_prof_desktop_reference.cpp  budget_prof_mobile.cpp  budget_prof_mobile_legacy.cpp  bug1_bad.cpp  bug2_bad.cpp  bug3_bad.cpp  bug4_bad.cpp  bug5_bad.cpp  bug6_bad.cpp  const_iter.cpp  const_rvalue.cpp  domains.cpp  domains_bad_wa.cpp  ebook.cpp  express.cpp  express_in.txt  hotels.cpp  hotels.txt  makefile  print_stats.cpp  print_stats_test_a.cpp  print_stats_test_b.cpp  print_stats_tests.cpp  tasks.cpp  test_domains.cpp
cpp_brown_belt/week_6/: database.cpp  database.h  input.txt  io.cpp  io.h  json.cpp  json.h  main.cpp  misc.cpp  misc.h  week_6.rar
cpp_red_belt/: profile.h  test_runner.cpp  test_runner.h
cpp_red_belt/week_1/: deque_2_vecs.cpp  log.cpp  macro.c  max_element_if.cpp  paginator.cpp  print_values.cpp  sort_by.cpp  table.cpp  uniq_id.cpp  update_field.cpp
cpp_red_belt/week_2/: ebook.txt  ebook_fast.cpp  ebook_slow.cpp  expresses_fast.cpp  expresses_slow.cpp  hotels.cpp  learner.cpp  slow.txt  sort_students.cpp
cpp_red_belt/week_3/: linked_list.cpp  makefile  object_pool.cpp  simple_vector.h  swap_sort_copy.cpp
cpp_red_belt/week_4/: airport_counter.cpp  list_swap.cpp  makefile  serve_requests.cpp  sport.cpp  stack_vector.h  stats.cpp  stats.h  string_view.cpp  stringset.cpp  text_editor.cpp  translator.cpp
cpp_red_belt/week_5/: concurrent_map.cpp  explore_key_words.cpp  group_heavy_strings.cpp  josephus_permutation.cpp  matrix_sum.cpp  merge_sort_3.cpp  priority_collection_2.cpp  rvalue.cpp  simple_vector.h  simple_vector_2.h  split_into_sentences.cpp  synchronized.cpp  test_list_iter.cpp
cpp_white_belt/: common.h  feedback.txt
cpp_white_belt/week_1/: a_plus_b.cpp  algo_sort.cpp  auto.cpp  bin.cpp  cpp.cpp  debug.cpp  (+10 more)
cpp_yellow_belt/: feedback.txt  test_framework.cpp  test_framework.h
temp/: SumMul.g4  SumMul.interp  SumMulBaseListener.cpp  SumMulBaseListener.h  SumMulLexer.cpp  SumMulLexer.h  SumMulListener.cpp  SumMulListener.h  SumMulParser.cpp  SumMulParser.h  multiple_inheritance.cpp  test.cpp
(+239 files in other folders)
